--- a/css/styles.css
+++ b/css/styles.css
@@ -416,7 +416,6 @@ img {
 }
 .page-bottom {
   align-items: baseline;
-  justify-content: center;
 }
 
 .contacts {
@@ -466,10 +465,6 @@ img {
 .footer-nav .tel:focus {
   color: var(--accent-color);
 }
-
-.social {
-  margin-right: 93px;
-}
 .social .social-link {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms var(--timing-function);
@@ -486,8 +481,7 @@ img {
   fill: var(--primery-background-color);
 }
 
-.social-title,
-.subscrip-title {
+.social-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -497,54 +491,7 @@ img {
   margin-top: 0;
 }
 
-.subscrip {
-  width: 570px;
-  height: 86px;
-}
-
-.subscrip-input {
-  padding: 15px 16px;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  width: 358px;
-  margin-right: 12px;
-}
-
-.subscrip-input::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscrip-button {
-  position: relative;
-  min-width: 200px;
-  min-height: 50px; 
-  padding: 10px 28px;
-  background-color: var(--accent-color);
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-
-  text-align: left;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--primery-background-color);
-}
-
-.submit-icon {
-  position: absolute;
-  top: 13px;
-  right: 28px;
-  fill: var(--primery-background-color);
-  /* margin-left: 10px; */
-  /* padding: 13px; */
-
 /* Страница  Portfolio */
-
 
 .filter {
   justify-content: center;
@@ -716,91 +663,84 @@ img {
   transition: transform 500ms var(--timing-function);
 }
 
-.modal-title {
-  text-align: center;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 12px;
-}
-
 .modal-button {
   position: fixed;
   top: 8px;
   right: 8px;
   width: 30px;
   height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   padding: 6px;
   justify-content: center;
   align-items: center;
   background-color: var(--primery-background-color);
+  fill: #000000;
 }
 
 .modal-icon {
   fill: #000000;
 }
-
-/* Форма */
-.form {
-  width: 100%;
-  /* outline: 2px solid red; */
+.modal-title {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
 }
+/* Форма */
+
 .form-field {
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .form-label {
   margin-bottom: 4px;
-
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.17;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: var(--secondary-text-color);
 }
+
 .form-input {
-  padding: 11px 12px;
-  margin-bottom: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  padding: 11px 12px;
 }
 
-.comment {
-  padding: 12px 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
+.form-field.comment {
   margin-bottom: 20px;
 }
 
 .form-field.policy {
   flex-direction: row;
+  margin-bottom: 20px;
 }
 
-.form-field.policy .form-input {
+.policy .form-input {
   margin-right: 8px;
 }
-.form-field.policy .form-label {
-  margin-bottom: 30px;
-}
 
+.policy-link {
+  color: var(--accent-color);
+}
 .form-button {
   min-width: 200px;
   min-height: 50px;
-  padding: 10px 56px;
-  margin-left: auto;
   margin-right: auto;
-  border: none;
+  margin-left: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--primery-background-color);
   background-color: var(--accent-color);
+  background: #2196f3;
+  border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  color: var(--primery-background-color);
-}
-
-.form-button:hover,
-.form-button:focus {
-  background-color: #188ce8;
 }
