--- a/css/styles.css
+++ b/css/styles.css
@@ -787,6 +787,7 @@ img {
   margin-bottom: 20px;
 }
 .form-field.comment .comment-text {
+  min-height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
